modified the EmployeeManagement system key feature are now functioning

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=""
+DB_PASSWORD=
 DB_NAME=employeemanagement
 PORT=4000
 SESSION_SECRET=kjhgfdfgjklkjhgfdxvsdffhdgs
+DB_PORT=3306
